# tracehub

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
PRPs/: adaptive-tracing.md  adaptive-tracing.md.toc
PRPs/adaptive-tracing/: 01-idea.md  01-idea.md.toc  02-plan.md  02-plan.md.toc  02.5-plan-validation.md  02.5-plan-validation.md.toc  04-execution-log.md  04-execution-log.md.toc
src/tracehub/: __init__.py  adaptive.py  app.py  cli.py  client.py  config.py  db.py  endpoints.py  models.py  streaming.py
